@@ -9,3 +9,4 @@ New since 1.9.0:
 * cups.Connection.addPrinter now allows (name, ppdname="foo.ppd") for
   installed PPDs
 * cups.PPD.Group.options is not a list, not a dict
+* cups.Connection.getPPDs()
