@@ -1,5 +1,7 @@
 2006-02-21  Tim Waugh  <twaugh@redhat.com>
 
+	* cupsconnection.c (Connection_getPPDs): Implemented.
+
 	* cupsppd.c (Group_getOptions): Return a list, not a dict, to
 	preserve the order of options.
 	* test.py (test_cups_module): Updated.
